# agent_4mission

./: .gitattributes  .gitignore  README.md  README0.md
ObjectDetection/: local.properties  settings.gradle
ObjectDetection/app/: CMakeLists.txt  build.gradle
ObjectDetection/app/src/main/: AndroidManifest.xml
ObjectDetection/app/src/main/assets/: best.ptl  best_graph.ptl  color.ptl  graphClasses.txt  mainClasses.txt
ObjectDetection/app/src/main/cpp/: bitmap_utils.cpp  bitmap_utils.h  objectdetection.cpp
ObjectDetection/app/src/main/cpp/qr/: wechat_qrcode.cpp
ObjectDetection/app/src/main/java/org/pytorch/demo/objectdetection/: MainActivity.java  PrePostProcessor.java  ResultView.java
ObjectDetection/app/src/main/res/layout/: activity_main.xml
ObjectDetection/app/src/main/res/values/: strings.xml
ObjectDetection/openCVLib341/: build.gradle
bin2img/: bin2img.py
data/: aug.py  generate_all.py  generate_graph.py  generate_plate.py  imshow.py  parsexml2txt.py  pic_rename.py
data/mission/Qrcode/labeled/annotation/: 100.txt  105.txt  107.txt  108.txt  111.txt  112.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  125.txt  126.txt  129.txt  131.txt  132.txt  133.txt  134.txt  137.txt  138.txt  139.txt  140.txt  148.txt  15.txt  155.txt  156.txt  157.txt  16.txt  164.txt  17.txt  171.txt  179.txt  18.txt  180.txt  20.txt  21.txt  22.txt  23.txt  24.txt  (+57 more)
data/mission/Qrcode/labeled/txt/: tft90-1-3.txt  tft90-2-3.txt  tft90-2-4.txt  tft90-3-5.txt  tft90-3-6.txt  tft90-3-7.txt  tft90-4-5.txt  tft90-4-6.txt  tft90-4-7.txt  tft90-5-5.txt  tft90-5-6.txt  tft90-5-7.txt  tft90-6-5.txt  tft90-6-6.txt  tft90-6-7.txt
data/mission/Qrcode/labeled/xml/: tft90-1-3.xml  tft90-2-3.xml  tft90-2-4.xml  tft90-3-5.xml  tft90-3-6.xml  tft90-3-7.xml  tft90-4-5.xml  tft90-4-6.xml  tft90-4-7.xml  tft90-5-5.xml  tft90-5-6.xml  tft90-5-7.xml  tft90-6-5.xml  tft90-6-6.xml  tft90-6-7.xml
data/mission/biggraph/labeled/annotation/: 100.txt  101.txt  102.txt  103.txt  109.txt  110.txt  111.txt  114.txt  117.txt  121.txt  122.txt  125.txt  126.txt  127.txt  134.txt  135.txt  136.txt  137.txt  138.txt  143.txt  146.txt  149.txt  150.txt  153.txt  154.txt  155.txt  156.txt  157.txt  158.txt  161.txt  40.txt  41.txt  42.txt  43.txt  44.txt  45.txt  46.txt  47.txt  48.txt  49.txt  (+64 more)
data/mission/biggraph/labeled/txt/: tft90-1-1.txt  tft90-1-2.txt  tft90-1-3.txt  tft90-1.txt  tft90-2-1.txt  tft90-2-2.txt  tft90-2.txt  tft90-3-1.txt  tft90-3-4.txt  tft90-3.txt  tft90-4-1.txt  tft90-4-2.txt  tft90-4-3.txt  tft90-4-4.txt  tft90-4.txt  tft90-5-1.txt  tft90-5-2.txt  tft90-5-3.txt  tft90-5-4.txt  tft90-5.txt  tft90-6-1.txt  tft90-6-2.txt  tft90-6-3.txt  tft90-6-4.txt  tft90-6-5.txt  tft90-6.txt
data/mission/biggraph/labeled/xml/: tft90-1-1.xml  tft90-1-2.xml  tft90-1-3.xml  tft90-1.xml  tft90-2-1.xml  tft90-2-2.xml  tft90-2.xml  tft90-3-1.xml  tft90-3-3.xml  tft90-3-4.xml  tft90-3.xml  (+16 more)
data_aug/: data_aug.py
resnet18/: export.py  inference.py  train.py
resnet18/images/: bigshape.txt
resnet18/scripts/: crop copy.py  crop.py
submission/: color_recognize.py  test.txt
utils/dataMake/: geometry.py  labelWrite.py
yolov5/: detect.py  eval.py  export.py  location.ipynb  mainmission.py  submission.py  temp.ipynb  train.py
yolov5/data/: 10_classes.yaml  mainmission.yaml  mainmission2.yaml  realgraph.yaml  realgraph3.0.yaml  realgraph4.0.yaml  realgraph5.0.yaml  realgraph6.0.yaml  shape.yaml
yolov5/data/hyps/: hyp.scratch-low-finetune.yaml  hyp.scratch-low.yaml
yolov5/runs/train/main_mission/: events.out.tfevents.1656391191.dellp100.250769.0  opt.yaml  results.csv
yolov5/runs/train/main_mission2.0/: events.out.tfevents.1661384019.fineserver.13033.0  opt.yaml  results.csv
yolov5/runs/train/mainmission3.0/: events.out.tfevents.1659113886.dellp100.97519.0  events.out.tfevents.1659249684.ubuntu-A100.708417.0  opt.yaml  results.csv
yolov5/runs/train/mainmission4.0_yolov5m/: events.out.tfevents.1660293042.dellp100.224205.0  hyp.yaml  opt.yaml  results.csv
yolov5/runs/train/realgraph-320/: events.out.tfevents.1655825654.dellp100.145182.0  opt.yaml  results.csv
yolov5/runs/train/realgraph3.0/: events.out.tfevents.1656939507.fineserver.12740.0  opt.yaml  results.csv
yolov5/runs/train/yolov5s2/: events.out.tfevents.1661066453.fineserver.36563.0  opt.yaml  results.csv
yolov5/utils/: augmentations.py  dataloaders.py
(+231 files in other folders)
